--- a/styles/index.css
+++ b/styles/index.css
@@ -67,7 +67,7 @@ h5 {
   gap: 1rem;
 }
 
-.links {
+.socials {
   display: flex;
   margin-left: 1rem;
   gap: 1rem;
@@ -82,7 +82,7 @@ hr {
   margin: 1rem 0;
 }
 
-a {
+.card-link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,6 +90,38 @@ a {
   color: black;
 }
 
-a:visited {
+.card-link:visited {
+  color: black;
+}
+
+nav {
+  height: 100%;
+}
+
+nav ul {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+nav li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+nav a {
+  position: relative;
+  padding: 0 1rem;
+  height: 100%;
+  color: white;
+  transition: all 300ms;
+}
+
+nav a:hover {
+  background-color: white;
   color: black;
 }
