--- a/styles/index.css
+++ b/styles/index.css
@@ -1,26 +1,5 @@
-body {
-  font-family: "Poppins";
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-main {
-  margin: auto;
-}
-
-strong {
-  font-weight: bold;
-}
-
 cite {
   font-style: italic;
-}
-
-h1 {
-  font-size: 1.5rem;
-  font-weight: bold;
 }
 
 h4 {
@@ -38,6 +17,7 @@ h5 {
   border-radius: 50%;
   filter: brightness(1.15) contrast(1.1) saturate(1.25);
   box-shadow: 0 0 0 3px white, 0 0 0 6px black;
+  animation: 600ms ease-in-out 0s 1 slideInTop;
 }
 
 .social {
@@ -46,29 +26,32 @@ h5 {
 
 .card {
   width: 1000px;
+  height: 100%;
   border: 2px solid black;
   padding: 1rem;
   margin: 1rem 0;
   border-radius: 0.5rem;
   box-shadow: 5px 5px 0 0 black;
-  line-height: 1.2rem;
+  overflow: hidden;
 }
 
 .container {
   display: flex;
   gap: 2rem;
   padding: 1rem;
-  /* align-items: center; */
+  min-height: 250px;
 }
 
 .personal {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  animation: 600ms ease-in-out 0s 1 slideInLeft;
 }
 
 .socials {
   display: flex;
+  justify-content: flex-end;
   margin-left: 1rem;
   gap: 1rem;
 }
@@ -94,34 +77,30 @@ hr {
   color: black;
 }
 
-nav {
-  height: 100%;
+@keyframes slideInTop {
+  0% {
+    transform: translateY(-50%);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
-nav ul {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem;
-}
-
-nav li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-nav a {
-  position: relative;
-  padding: 0 1rem;
-  height: 100%;
-  color: white;
-  transition: all 300ms;
-}
-
-nav a:hover {
-  background-color: white;
-  color: black;
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-10%);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
