--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,19 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Poppins", sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 0.25rem;
+}
+
 header {
   height: 3rem;
   background-color: black;
@@ -16,4 +29,60 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: auto;
+}
+
+strong {
+  font-weight: bold;
+}
+
+p {
+  line-height: 1.2rem;
+}
+
+header nav {
+  height: 100%;
+}
+
+header nav ul {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+header nav li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+header nav a,
+header nav a:visited {
+  position: relative;
+  padding: 0 1rem;
+  height: 100%;
+  color: white;
+  transition: all 300ms;
+  text-decoration: none;
+}
+
+header nav a:hover,
+header nav a:visited:hover {
+  background-color: white;
+  color: black;
+}
+
+.main-container {
+  width: min(90%, 1000px);
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.flex-container {
+  display: flex;
 }
