menu updates and adding exercise 1 to page

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,28 @@ h1 {
   margin-bottom: 0.25rem;
 }
 
+h4 {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-block: 1rem;
+  background-color: black;
+  color: white;
+  padding: 1rem 0.5rem;
+}
+
+h6 {
+  font-weight: bold;
+  margin-block: 0.5rem;
+}
+
+blockquote ul {
+  list-style: inside;
+}
+
+blockquote li {
+  padding-block: 0.25rem;
+}
+
 header {
   height: 3rem;
   background-color: black;
