--- a/styles/module-01/style.css
+++ b/styles/module-01/style.css
@@ -10,6 +10,8 @@ h1 {
 
 #week-menu {
   position: relative;
+  max-width: 10rem;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -53,7 +55,8 @@ h1 {
   cursor: default;
 }
 
-.hide {
+.hide,
+#back-btn.hide {
   animation: 600ms ease-in-out 0s 1 slideOutLeft;
   transform: translateX(-100%);
 }
@@ -69,11 +72,19 @@ h1 {
 }
 
 #back-btn {
-  position: absolute;
-  bottom: 2rem;
+  position: fixed;
+  bottom: 4rem;
+  width: inherit;
+  max-width: inherit;
   clip-path: polygon(0% 0%, 0% 100%, 90% 100%, 100% 0%);
   align-self: flex-start;
-  animation: 600ms ease-in-out 0s 1 slideInLeft;
+  animation: 600ms ease-in-out 0s 1 slideInLeftBackBtn;
+  transform: translateX(-2rem);
+}
+
+#back-btn:hover {
+  transform: translateX(0);
+  clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
 }
 
 #exercises-menu {
@@ -104,7 +115,8 @@ h1 {
   transition: all 250ms;
 }
 
-.exercise-btn:hover {
+.exercise-btn:hover,
+.exercise-btn.selected {
   background-color: black;
   color: white;
 }
@@ -125,6 +137,15 @@ h1 {
   }
   100% {
     transform: translateX(0);
+  }
+}
+
+@keyframes slideInLeftBackBtn {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(-2rem);
   }
 }
 
